# DiscordQtBuild

./: CMakeLists.txt  Quax.qrc
src/: CMakeLists.txt  main.cpp  usermodel.cpp  usermodel.hpp
src/ui/: ChannelItem.qml  ChatArea.qml  MainView.qml  MessageItem.qml  SidebarItem.qml  main.qml
